adding minor corrections
